# deepseekbar

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-06-05-deepseekbar.md
docs/superpowers/specs/: 2026-06-05-deepseekbar-design.md
src/: chart.test.ts  chart.ts  format.test.ts  format.ts  i18n.ts  main.ts  state.test.ts  state.ts  styles.css  types.ts  util.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  deepseek.rs  error.rs  lib.rs  main.rs  scheduler.rs  state.rs  store.rs  tray.rs  updater.rs
src/ui/: compact.ts  error.ts  expanded.ts  settings.ts
