[package]
name = "deepseekbar"
version = "0.1.2"
description = "DeepSeek account balance floating widget"
authors = ["deepseekbar"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "deepseekbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri-plugin-global-shortcut = "2"
base64 = "0.22"
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["sync", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
keyring = "3.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3.13"
tokio = { version = "1.40", features = ["test-util"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
